--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,5 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:17.1.0'
     implementation 'androidx.activity:activity:1.2.0-beta01'
     implementation 'androidx.fragment:fragment:1.3.0-beta01'
+    implementation "androidx.preference:preference:1.1.1"
 }
