--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
+    implementation 'com.squareup.okhttp3:okhttp:4.9.0'
     implementation 'com.google.android.gms:play-services-location:17.1.0'
     implementation 'androidx.activity:activity:1.2.0-beta01'
     implementation 'androidx.fragment:fragment:1.3.0-beta01'
